--- a/app/src/prod/res/layout/activity_main.xml
+++ b/app/src/prod/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         <com.diyarme.designconcept.MorphingButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Button"
+            android:text="Button"
             android:layout_gravity="right"
             android:background="@color/colorPrimary"
             android:id="@+id/button"
@@ -36,4 +36,10 @@
             android:layout_alignParentEnd="true" />
     </RelativeLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/textView"
+        android:layout_centerHorizontal="true"/>
 </RelativeLayout>
